Open Web UI Provider

--- a/custom_components/ai_automation_suggester/translations/ca.json
+++ b/custom_components/ai_automation_suggester/translations/ca.json
@@ -28,6 +28,10 @@
           "ollama_port": "Port d'Ollama",
           "ollama_https": "Utilitzar HTTPS per a Ollama",
           "ollama_disable_think": "Desactivar el mode de pensament (Ollama)",
+          "openwebui_ip": "Adreça IP d'Open Web UI",
+          "openwebui_port": "Port d'Open Web UI",
+          "openwebui_https": "Utilitzar HTTPS per a Open Web UI",
+          "openwebui_disable_think": "Desactivar el mode de pensament (Open Web UI)",
           "custom_openai_endpoint": "Punt final d'OpenAI Personalitzat",
           "localai_ip": "Adreça IP de LocalAI",
           "localai_port": "Port de LocalAI",
@@ -62,6 +66,10 @@
           "ollama_port": "Port d'Ollama",
           "ollama_https": "Utilitzar HTTPS per a Ollama",
           "ollama_disable_think": "Desactivar el mode de pensament (Ollama)",
+          "openwebui_ip": "Adreça IP d'Open Web UI",
+          "openwebui_port": "Port d'Open Web UI",
+          "openwebui_https": "Utilitzar HTTPS per a Open Web UI",
+          "openwebui_disable_think": "Desactivar el mode de pensament (Open Web UI)",
           "custom_openai_endpoint": "Punt final d'OpenAI Personalitzat",
           "openrouter_reasoning_max_tokens": "Màxim de tokens de raonament d'OpenRouter",
           "openai_azure_deployment_id": "ID de Desplegament d'Azure",
