--- a/custom_components/ai_automation_suggester/translations/de.json
+++ b/custom_components/ai_automation_suggester/translations/de.json
@@ -28,6 +28,10 @@
           "ollama_port": "Ollama Port",
           "ollama_https": "HTTPS für Ollama verwenden",
           "ollama_disable_think": "Denkmodus deaktivieren (Ollama)",
+          "openwebui_ip": "Open Web UI IP-Adresse",
+          "openwebui_port": "Open Web UI Port",
+          "openwebui_https": "HTTPS für Open Web UI verwenden",
+          "openwebui_disable_think": "Denkmodus deaktivieren (Open Web UI)",
           "custom_openai_endpoint": "Benutzerdefinierter OpenAI Endpunkt",
           "localai_ip": "LocalAI IP-Adresse",
           "localai_port": "LocalAI Port",
@@ -62,6 +66,10 @@
           "ollama_port": "Ollama Port",
           "ollama_https": "HTTPS für Ollama verwenden",
           "ollama_disable_think": "Denkmodus deaktivieren (Ollama)",
+          "openwebui_ip": "Open Web UI IP-Adresse",
+          "openwebui_port": "Open Web UI Port",
+          "openwebui_https": "HTTPS für Open Web UI verwenden",
+          "openwebui_disable_think": "Denkmodus deaktivieren (Open Web UI)",
           "custom_openai_endpoint": "Benutzerdefinierter OpenAI Endpunkt",
           "openrouter_reasoning_max_tokens": "OpenRouter Maximale Reasoning-Token",
           "openai_azure_deployment_id": "Azure Bereitstellungs-ID",
