--- a/custom_components/ai_automation_suggester/translations/it.json
+++ b/custom_components/ai_automation_suggester/translations/it.json
@@ -28,6 +28,10 @@
           "ollama_port": "Porta Ollama",
           "ollama_https": "Usa HTTPS per Ollama",
           "ollama_disable_think": "Disabilita modalità di pensiero (Ollama)",
+          "openwebui_ip": "Indirizzo IP Open Web UI",
+          "openwebui_port": "Porta Open Web UI",
+          "openwebui_https": "Usa HTTPS per Open Web UI",
+          "openwebui_disable_think": "Disabilita modalità di pensiero (Open Web UI)",
           "custom_openai_endpoint": "Endpoint OpenAI Personalizzato",
           "localai_ip": "Indirizzo IP LocalAI",
           "localai_port": "Porta LocalAI",
@@ -62,6 +66,10 @@
           "ollama_port": "Porta Ollama",
           "ollama_https": "Usa HTTPS per Ollama",
           "ollama_disable_think": "Disabilita modalità di pensiero (Ollama)",
+          "openwebui_ip": "Indirizzo IP Open Web UI",
+          "openwebui_port": "Porta Open Web UI",
+          "openwebui_https": "Usa HTTPS per Open Web UI",
+          "openwebui_disable_think": "Disabilita modalità di pensiero (Open Web UI)",
           "custom_openai_endpoint": "Endpoint OpenAI Personalizzato",
           "openrouter_reasoning_max_tokens": "OpenRouter Max Token di Ragionamento",
           "openai_azure_deployment_id": "ID Deployment Azure",
