--- a/custom_components/ai_automation_suggester/translations/nl.json
+++ b/custom_components/ai_automation_suggester/translations/nl.json
@@ -28,6 +28,10 @@
           "ollama_port": "Ollama-poort",
           "ollama_https": "HTTPS gebruiken voor Ollama",
           "ollama_disable_think": "Denkmodus uitschakelen (Ollama)",
+          "openwebui_ip": "Open Web UI IP-adres",
+          "openwebui_port": "Open Web UI-poort",
+          "openwebui_https": "HTTPS gebruiken voor Open Web UI",
+          "openwebui_disable_think": "Denkmodus uitschakelen (Open Web UI)",
           "custom_openai_endpoint": "Aangepast OpenAI-eindpunt",
           "localai_ip": "LocalAI IP-adres",
           "localai_port": "LocalAI-poort",
