--- a/custom_components/ai_automation_suggester/translations/ru.json
+++ b/custom_components/ai_automation_suggester/translations/ru.json
@@ -28,6 +28,10 @@
           "ollama_port": "Порт Ollama",
           "ollama_https": "Использовать HTTPS для Ollama",
           "ollama_disable_think": "Отключить режим мышления (Ollama)",
+          "openwebui_ip": "IP-адрес Open Web UI",
+          "openwebui_port": "Порт Open Web UI",
+          "openwebui_https": "Использовать HTTPS для Open Web UI",
+          "openwebui_disable_think": "Отключить режим мышления (Open Web UI)",
           "custom_openai_endpoint": "Пользовательский Endpoint OpenAI",
           "localai_ip": "IP-адрес LocalAI",
           "localai_port": "Порт LocalAI",
@@ -62,6 +66,10 @@
           "ollama_port": "Порт Ollama",
           "ollama_https": "Использовать HTTPS для Ollama",
           "ollama_disable_think": "Отключить режим мышления (Ollama)",
+          "openwebui_ip": "IP-адрес Open Web UI",
+          "openwebui_port": "Порт Open Web UI",
+          "openwebui_https": "Использовать HTTPS для Open Web UI",
+          "openwebui_disable_think": "Отключить режим мышления (Open Web UI)",
           "custom_openai_endpoint": "Пользовательский Endpoint OpenAI",
           "openrouter_reasoning_max_tokens": "OpenRouter Максимальное количество токенов для рассуждений",
           "openai_azure_deployment_id": "ID развертывания Azure",
