--- a/custom_components/ai_automation_suggester/translations/zh.json
+++ b/custom_components/ai_automation_suggester/translations/zh.json
@@ -28,6 +28,10 @@
           "ollama_port": "Ollama 端口",
           "ollama_https": "为 Ollama 使用 HTTPS",
           "ollama_disable_think": "禁用思考模式 (Ollama)",
+          "openwebui_ip": "Open Web UI IP 地址",
+          "openwebui_port": "Open Web UI 端口",
+          "openwebui_https": "为 Open Web UI 使用 HTTPS",
+          "openwebui_disable_think": "禁用思考模式 (Open Web UI)",
           "custom_openai_endpoint": "自定义 OpenAI 端点",
           "localai_ip": "LocalAI IP 地址",
           "localai_port": "LocalAI 端口",
@@ -62,6 +66,10 @@
           "ollama_port": "Ollama 端口",
           "ollama_https": "为 Ollama 使用 HTTPS",
           "ollama_disable_think": "禁用思考模式 (Ollama)",
+          "openwebui_ip": "Open Web UI IP 地址",
+          "openwebui_port": "Open Web UI 端口",
+          "openwebui_https": "为 Open Web UI 使用 HTTPS",
+          "openwebui_disable_think": "禁用思考模式 (Open Web UI)",
           "custom_openai_endpoint": "自定义 OpenAI 端点",
           "openrouter_reasoning_max_tokens": "OpenRouter 推理最大令牌",
           "openai_azure_deployment_id": "Azure 部署 ID",
