--- a/custom_components/ai_automation_suggester/translations/ru.json
+++ b/custom_components/ai_automation_suggester/translations/ru.json
@@ -43,7 +43,8 @@
       "api_error": "Ошибка валидации API: {error_message}",
       "cannot_connect": "Не удалось подключиться. Проверьте настройки и сеть.",
       "auth_error": "Ошибка аутентификации. Проверьте свои учетные данные.",
-      "unknown": "Произошла неизвестная ошибка. Подробности см. в журналах."
+      "unknown": "Произошла неизвестная ошибка. Подробности см. в журналах.",
+      "api_key_required": "Для этого поставщика требуется ключ API."
     },
     "abort": {
       "already_configured": "Этот поставщик ИИ уже настроен. Вы можете отредактировать его на странице интеграций."
