--- a/custom_components/ai_automation_suggester/translations/ca.json
+++ b/custom_components/ai_automation_suggester/translations/ca.json
@@ -17,6 +17,7 @@
           "temperature": "Temperatura",
           "max_input_tokens": "Màxim de tokens d'entrada",
           "max_output_tokens": "Màxim de tokens de sortida",
+          "timeout": "Temps d'espera (segons)",
           "generic_openai_api_endpoint": "URL completa de l'API d'OpenAI genèrica (ha d'acabar amb 'completions')",
           "generic_openai_validation_endpoint": "URL de validació (ha d'acabar amb 'models')",
           "generic_openai_enable_validation": "Activar validació",
@@ -60,6 +61,7 @@
           "temperature": "Temperatura",
           "max_input_tokens": "Màxim de tokens d'entrada",
           "max_output_tokens": "Màxim de tokens de sortida",
+          "timeout": "Temps d'espera (segons)",
           "localai_ip": "Adreça IP de LocalAI",
           "localai_port": "Port de LocalAI",
           "localai_https": "Utilitzar HTTPS per a LocalAI",
