--- a/custom_components/ai_automation_suggester/translations/de.json
+++ b/custom_components/ai_automation_suggester/translations/de.json
@@ -17,6 +17,7 @@
           "temperature": "Temperatur",
           "max_input_tokens": "Maximale Eingabetoken",
           "max_output_tokens": "Maximale Ausgabetoken",
+          "timeout": "Timeout (Sekunden)",
           "generic_openai_api_endpoint": "Vollständige URL der generischen OpenAI API (sollte mit 'completions' enden)",
           "generic_openai_validation_endpoint": "Validierungs-URL (sollte mit 'models' enden)",
           "generic_openai_enable_validation": "Validierung aktivieren",
@@ -60,6 +61,7 @@
           "temperature": "Temperatur",
           "max_input_tokens": "Maximale Eingabetoken",
           "max_output_tokens": "Maximale Ausgabetoken",
+          "timeout": "Timeout (Sekunden)",
           "localai_ip": "LocalAI IP-Adresse",
           "localai_port": "LocalAI Port",
           "localai_https": "HTTPS für LocalAI verwenden",
