--- a/custom_components/ai_automation_suggester/translations/it.json
+++ b/custom_components/ai_automation_suggester/translations/it.json
@@ -17,6 +17,7 @@
           "temperature": "Temperatura",
           "max_input_tokens": "Max Input Tokens",
           "max_output_tokens": "Max Output Tokens",
+          "timeout": "Timeout (secondi)",
           "generic_openai_api_endpoint": "URL completo API OpenAI generica (deve terminare con 'completions')",
           "generic_openai_validation_endpoint": "URL di validazione (deve terminare con 'models')",
           "generic_openai_enable_validation": "Abilita Validazione",
@@ -60,6 +61,7 @@
           "temperature": "Temperatura",
           "max_input_tokens": "Max Input Tokens",
           "max_output_tokens": "Max Output Tokens",
+          "timeout": "Timeout (secondi)",
           "localai_ip": "Indirizzo IP LocalAI",
           "localai_port": "Porta LocalAI",
           "localai_https": "Usa HTTPS per LocalAI",
