--- a/custom_components/ai_automation_suggester/translations/nl.json
+++ b/custom_components/ai_automation_suggester/translations/nl.json
@@ -17,6 +17,7 @@
           "temperature": "Temperatuur",
           "max_input_tokens": "Maximale invoertokens",
           "max_output_tokens": "Maximale uitvoertokens",
+          "timeout": "Timeout (seconden)",
           "generic_openai_api_endpoint": "Volledige URL generieke OpenAI API (moet eindigen op 'completions')",
           "generic_openai_validation_endpoint": "Validatie-URL (moet eindigen op 'models')",
           "generic_openai_enable_validation": "Validatie inschakelen",
@@ -60,6 +61,7 @@
           "temperature": "Temperatuur",
           "max_input_tokens": "Maximale invoertokens",
           "max_output_tokens": "Maximale uitvoertokens",
+          "timeout": "Timeout (seconden)",
           "localai_ip": "LocalAI IP-adres",
           "localai_port": "LocalAI-poort",
           "localai_https": "HTTPS gebruiken voor LocalAI",
