--- a/custom_components/ai_automation_suggester/translations/ru.json
+++ b/custom_components/ai_automation_suggester/translations/ru.json
@@ -17,6 +17,7 @@
           "temperature": "Температура",
           "max_input_tokens": "Максимальное количество входных токенов",
           "max_output_tokens": "Максимальное количество выходных токенов",
+          "timeout": "Тайм-аут (секунды)",
           "generic_openai_api_endpoint": "Полный URL общего API OpenAI (должен заканчиваться на 'completions')",
           "generic_openai_validation_endpoint": "URL валидации (должен заканчиваться на 'models')",
           "generic_openai_enable_validation": "Включить валидацию",
@@ -60,6 +61,7 @@
           "temperature": "Температура",
           "max_input_tokens": "Максимальное количество входных токенов",
           "max_output_tokens": "Максимальное количество выходных токенов",
+          "timeout": "Тайм-аут (секунды)",
           "localai_ip": "IP-адрес LocalAI",
           "localai_port": "Порт LocalAI",
           "localai_https": "Использовать HTTPS для LocalAI",
