--- a/custom_components/ai_automation_suggester/translations/zh.json
+++ b/custom_components/ai_automation_suggester/translations/zh.json
@@ -17,6 +17,7 @@
           "temperature": "温度",
           "max_input_tokens": "最大输入令牌",
           "max_output_tokens": "最大输出令牌",
+          "timeout": "超时（秒）",
           "generic_openai_api_endpoint": "通用 OpenAI API 完整 URL（应以 'completions' 结尾）",
           "generic_openai_validation_endpoint": "验证 URL（应以 'models' 结尾）",
           "generic_openai_enable_validation": "启用验证",
@@ -60,6 +61,7 @@
           "temperature": "温度",
           "max_input_tokens": "最大输入令牌",
           "max_output_tokens": "最大输出令牌",
+          "timeout": "超时（秒）",
           "localai_ip": "LocalAI IP 地址",
           "localai_port": "LocalAI 端口",
           "localai_https": "为 LocalAI 使用 HTTPS",
