--- a/custom_components/ai_automation_suggester/translations/es.json
+++ b/custom_components/ai_automation_suggester/translations/es.json
@@ -17,6 +17,7 @@
           "temperature": "Temperatura",
           "max_input_tokens": "Máximo de tokens de entrada",
           "max_output_tokens": "Máximo de tokens de salida",
+          "timeout": "Tiempo de espera (segundos)",
           "generic_openai_api_endpoint": "URL completa de la API de OpenAI genérica (debe terminar en 'completions')",
           "generic_openai_validation_endpoint": "URL de validación (debe terminar en 'models')",
           "generic_openai_enable_validation": "Habilitar Validación",
@@ -56,6 +57,7 @@
           "temperature": "Temperatura",
           "max_input_tokens": "Máximo de tokens de entrada",
           "max_output_tokens": "Máximo de tokens de salida",
+          "timeout": "Tiempo de espera (segundos)",
           "localai_ip": "Dirección IP de LocalAI",
           "localai_port": "Puerto de LocalAI",
           "localai_https": "Usar HTTPS para LocalAI",
